# inireader

./: CMakeLists.txt  LICENSE  inireader.c  inireader.h
examples/: CMakeLists.txt  print_objects.c
tests/: CMakeLists.txt  test.c  test_read_object.c  test_utils.c
